updated file structure

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Analog Clock App</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="Clock_app\static\styles.css">
 </head>
 <body>
     <div class="clock">
@@ -12,6 +12,7 @@
         <div class="hand minute-hand"></div>
         <div class="hand second-hand"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="Clock_app\static\script.js"></script>
 </body>
 </html>
+
