--- a/static/styles.css
+++ b/static/styles.css
@@ -3,7 +3,8 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f0f0f0;
+    background-color: #f3f3f3;
+    margin: 0;
 }
 
 .clock {
@@ -16,24 +17,52 @@ body {
 
 .hand {
     width: 50%;
-    height: 2px;
+    height: 3px;
     background-color: black;
     position: absolute;
     top: 50%;
+    left: 50%;
     transform-origin: 100%;
-    transform: rotate(90deg);
+    transform: translate(-50%, -50%);
 }
 
 .hour-hand {
-    background-color: #333;
-    height: 4px;
+    background-color: #1d3557;
+    height: 5px;
+    border-radius: 5px 0 0 5px;
 }
 
 .minute-hand {
-    background-color: #666;
+    background-color: #457b9d;
+    height: 4px;
+    border-radius: 4px 0 0 4px;
 }
 
 .second-hand {
-    background-color: red;
-    height: 1px;
+    background-color: #e63946;
+    height: 2px;
+    border-radius: 2px 0 0 2px;
+}
+
+.center-circle {
+    width: 12px;
+    height: 12px;
+    background-color: black;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.input-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+
+input[type="number"] {
+    width: 50px;
 }
