--- a/templates/index.html
+++ b/templates/index.html
@@ -8,20 +8,39 @@
     <title>Analog Clock</title>
 </head>
 <body>
-    <div class="clock">
-        <div class="hand hour-hand"></div>
-        <div class="hand minute-hand"></div>
-        <div class="hand second-hand"></div>
-        <div class="center-circle"></div>
-    </div>
-    <div class="input-container">
-        <label for="hour-input">Hour:</label>
-        <input type="number" id="hour-input" min="0" max="23" step="1">
-        <label for="minute-input">Minute:</label>
-        <input type="number" id="minute-input" min="0" max="59" step="1">
-        <label for="second-input">Second:</label>
-        <input type="number" id="second-input" min="0" max="59" step="1">
-        <button id="set-time">Set Time</button>
+    <h1>Learn to tell time!</h1>
+    <div class="task-container">
+        <div class="task">
+            <h2>What time is it?</h2>
+            <div class="clock clock1">
+                <div class="hand hour-hand"></div>
+                <div class="hand minute-hand"></div>
+                <div class="center-circle"></div>
+            </div>
+            <div class="input-container">
+                <label for="hour-input1">Hour:</label>
+                <input type="number" id="hour-input1" min="0" max="12" step="1">
+                <label for="minute-input1">Minute:</label>
+                <input type="number" id="minute-input1" min="0" max="59" step="1">
+                <button id="submit-time1">Submit</button>
+            </div>
+            <div id="hint1" class="hint"></div>
+        </div>
+        <div class="task">
+            <h2>Set the time</h2>
+            <div class="clock clock2">
+                <div class="hand hour-hand"></div>
+                <div class="hand minute-hand"></div>
+                <div class="center-circle"></div>
+            </div>
+            <div class="input-container">
+                <label for="hour-input2">Hour:</label>
+                <input type="number" id="hour-input2" min="0" max="12" step="1">
+                <label for="minute-input2">Minute:</label>
+                <input type="number" id="minute-input2" min="0" max="59" step="1">
+                <button id="submit-time2">Submit</button>
+            </div>
+        </div>
     </div>
     <script src="static/script.js"></script>
 </body>
