--- a/static/styles.css
+++ b/static/styles.css
@@ -1,68 +1,40 @@
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background-color: #f3f3f3;
     margin: 0;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+}
+
+h1 {
+    color: #2b2d42;
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+
+.task-container {
+    display: flex;
+    justify-content: space-between;
+    width: 80%;
+    gap: 2rem;
+}
+
+.task {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h2 {
+    color: #4f4f4f;
+    font-size: 1.8rem;
+    margin-bottom: 0.5rem;
 }
 
 .clock {
     width: 300px;
     height: 300px;
-    border: 5px solid black;
-    border-radius: 50%;
-    position: relative;
-}
-
-.hand {
-    width: 50%;
-    height: 3px;
-    background-color: black;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform-origin: 100%;
-    transform: translate(-50%, -50%);
-}
-
-.hour-hand {
-    background-color: #1d3557;
-    height: 5px;
-    border-radius: 5px 0 0 5px;
-}
-
-.minute-hand {
-    background-color: #457b9d;
-    height: 4px;
-    border-radius: 4px 0 0 4px;
-}
-
-.second-hand {
-    background-color: #e63946;
-    height: 2px;
-    border-radius: 2px 0 0 2px;
-}
-
-.center-circle {
-    width: 12px;
-    height: 12px;
-    background-color: black;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.input-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-top: 20px;
-}
-
-input[type="number"] {
-    width: 50px;
-}
+    border: 5px
