--- a/static/styles.css
+++ b/static/styles.css
@@ -44,15 +44,13 @@ h2 {
 }
 
 .hand {
-    width: 50%;
-    height: 3px;
     background-color: black;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform-origin: 100%;
-    transform: translate(-50%, -50%);
+    transform-origin: 100% 50%;
 }
+
 
 .hour-hand {
     background-color: #1d3557;
